Fix double scroll container & table margin bug

--- a/src/components/collection/TableCollection.module.scss
+++ b/src/components/collection/TableCollection.module.scss
@@ -1,3 +1,7 @@
 .TableWrapper {
-  overflow: auto;
+  overflow-x: auto;
+
+  & > * {
+    margin-bottom: 0;
+  }
 }
