--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -34,7 +34,7 @@
 .content {
   position: relative;
   padding: spacing();
-  overflow-x: hidden;
+  overflow: hidden;
 
   .app & {
     flex: 1 0 0;
